--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -30,7 +30,7 @@ h1 {
   font-size: 40px;
 }
 
-h3{
+h3 {
   font-size: 30px;
 }
 
@@ -58,6 +58,10 @@ h6 {
   font-size: 18px;
 }
 
+.swiper-scrollbar {
+  opacity: 0 !important
+}
+
 @layer utilities {
   .glassy {
     @apply bg-white/10 backdrop-blur-md border border-white/20 shadow-lg;
@@ -68,20 +72,43 @@ h6 {
   }
 
   .glassy_dark {
-    @apply bg-[rgba(0,0,0,0.75)] backdrop-blur-md border border-[rgba(0,0,0,0.9)] shadow-lg;
+    @apply bg-black/75 backdrop-blur-md border border-black/90 shadow-lg;
+  }
+}
+
+@media (max-width: 1440px) {
+  .contain {
+    padding-left: 80px;
+    padding-right: 80px;
   }
 }
 
 @media (max-width: 1200px) {
+  .contain {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
 }
 
 @media (max-width: 992px) {
+  .contain {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
 }
 
 @media (max-width: 768px) {
+  .contain {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 
 @media (max-width: 520px) {
+  .contain {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
 ::-webkit-scrollbar-track {
