--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -77,7 +77,7 @@ h6,
 }
 
 .swiper-scrollbar {
-  opacity: 0 !important
+  opacity: 0 !important;
 }
 
 @layer utilities {
@@ -106,12 +106,122 @@ h6,
     padding-left: 60px;
     padding-right: 60px;
   }
+
+  .contain_y {
+    padding-top: 35px;
+    padding-bottom: 35px;
+  }
+
+  h1,
+  .h1 {
+    font-size: 37.5px;
+  }
+
+  h2,
+  .h2 {
+    font-size: 32.5px;
+  }
+
+  h3,
+  .h3 {
+    font-size: 28.5px;
+  }
+
+  h4,
+  .h4 {
+    font-size: 24px;
+  }
+
+  h5,
+  .h5 {
+    font-size: 19px;
+  }
+
+  h6,
+  .h6 {
+    font-size: 16px;
+  }
+
+  .subtitle_1 {
+    font-size: 13px;
+  }
+
+  .subtitle_2 {
+    font-size: 12px;
+  }
+
+  .body_1 {
+    font-size: 11px;
+  }
+
+  .body_2 {
+    font-size: 9px;
+  }
+
+  .button {
+    font-size: 17px;
+  }
 }
 
 @media (max-width: 992px) {
   .contain {
     padding-left: 40px;
     padding-right: 40px;
+  }
+
+  .contain_y {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  h1,
+  .h1 {
+    font-size: 36px;
+  }
+
+  h2,
+  .h2 {
+    font-size: 30px;
+  }
+
+  h3,
+  .h3 {
+    font-size: 27px;
+  }
+
+  h4,
+  .h4 {
+    font-size: 22px;
+  }
+
+  h5,
+  .h5 {
+    font-size: 18px;
+  }
+
+  h6,
+  .h6 {
+    font-size: 15px;
+  }
+
+  .subtitle_1 {
+    font-size: 12px;
+  }
+
+  .subtitle_2 {
+    font-size: 11px;
+  }
+
+  .body_1 {
+    font-size: 10px;
+  }
+
+  .body_2 {
+    font-size: 8px;
+  }
+
+  .button {
+    font-size: 16px;
   }
 }
 
@@ -120,12 +230,122 @@ h6,
     padding-left: 20px;
     padding-right: 20px;
   }
+
+  .contain_y {
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+
+  h1,
+  .h1 {
+    font-size: 34px;
+  }
+
+  h2,
+  .h2 {
+    font-size: 28px;
+  }
+
+  h3,
+  .h3 {
+    font-size: 25px;
+  }
+
+  h4,
+  .h4 {
+    font-size: 20px;
+  }
+
+  h5,
+  .h5 {
+    font-size: 16px;
+  }
+
+  h6,
+  .h6 {
+    font-size: 13px;
+  }
+
+  .subtitle_1 {
+    font-size: 10px;
+  }
+
+  .subtitle_2 {
+    font-size: 9px;
+  }
+
+  .body_1 {
+    font-size: 8px;
+  }
+
+  .body_2 {
+    font-size: 7px;
+  }
+
+  .button {
+    font-size: 15px;
+  }
 }
 
 @media (max-width: 520px) {
   .contain {
     padding-left: 10px;
     padding-right: 10px;
+  }
+
+  .contain_y {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  h1,
+  .h1 {
+    font-size: 32px;
+  }
+
+  h2,
+  .h2 {
+    font-size: 26px;
+  }
+
+  h3,
+  .h3 {
+    font-size: 22.5px;
+  }
+
+  h4,
+  .h4 {
+    font-size: 18px;
+  }
+
+  h5,
+  .h5 {
+    font-size: 15px;
+  }
+
+  h6,
+  .h6 {
+    font-size: 12px;
+  }
+
+  .subtitle_1 {
+    font-size: 9px;
+  }
+
+  .subtitle_2 {
+    font-size: 8px;
+  }
+
+  .body_1 {
+    font-size: 7px;
+  }
+
+  .body_2 {
+    font-size: 6px;
+  }
+
+  .button {
+    font-size: 16px;
   }
 }
 
@@ -142,75 +362,4 @@ h6,
 ::-webkit-scrollbar-thumb {
   background-color: #dc2626;
   border-radius: 1000px;
-}
-
-
-
-@layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 224 71.4% 4.1%;
-    --card: 0 0% 100%;
-    --card-foreground: 224 71.4% 4.1%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 224 71.4% 4.1%;
-    --primary: 220.9 39.3% 11%;
-    --primary-foreground: 210 20% 98%;
-    --secondary: 220 14.3% 95.9%;
-    --secondary-foreground: 220.9 39.3% 11%;
-    --muted: 220 14.3% 95.9%;
-    --muted-foreground: 220 8.9% 46.1%;
-    --accent: 220 14.3% 95.9%;
-    --accent-foreground: 220.9 39.3% 11%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 20% 98%;
-    --border: 220 13% 91%;
-    --input: 220 13% 91%;
-    --ring: 224 71.4% 4.1%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
-  }
-
-  .dark {
-    --background: 224 71.4% 4.1%;
-    --foreground: 210 20% 98%;
-    --card: 224 71.4% 4.1%;
-    --card-foreground: 210 20% 98%;
-    --popover: 224 71.4% 4.1%;
-    --popover-foreground: 210 20% 98%;
-    --primary: 210 20% 98%;
-    --primary-foreground: 220.9 39.3% 11%;
-    --secondary: 215 27.9% 16.9%;
-    --secondary-foreground: 210 20% 98%;
-    --muted: 215 27.9% 16.9%;
-    --muted-foreground: 217.9 10.6% 64.9%;
-    --accent: 215 27.9% 16.9%;
-    --accent-foreground: 210 20% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 20% 98%;
-    --border: 215 27.9% 16.9%;
-    --input: 215 27.9% 16.9%;
-    --ring: 216 12.2% 83.9%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
-  }
-}
-
-
-
-@layer base {
-  * {
-    @apply border-border;
-  }
-
-  body {
-    @apply bg-background text-foreground;
-  }
 }
